Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0202 - removendo configuracao ainda do admin catalogo e alguns ajustes para o novo projeto
- atualizando algumas libs do projeto

- utilizando o datafaker no lugar do javafaker

--- a/buildSrc/src/main/groovy/java-conventions.gradle
+++ b/buildSrc/src/main/groovy/java-conventions.gradle
@@ -12,6 +12,11 @@ repositories {
 dependencies {
     implementation 'io.vavr:vavr:0.10.4'
 
+    // a versao 2.0 da erro
+    implementation('org.yaml:snakeyaml:2.0') {
+        version { strictly('2.0') }
+    }
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
