Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0404 - adicionando configuracao do graphql e graph de categoria
- adicionando implementacao em memoria do categoria gateway

--- a/infrastructure/src/main/resources/application-development.yml
+++ b/infrastructure/src/main/resources/application-development.yml
@@ -1,3 +1,6 @@
+graphql:
+  graphiql: true
+
 # o profle de dev eh o mais simples possivel, sem muitas das integracoes  que o projeto possui
 spring:
   autoconfigure:
