--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+graphql:
+  graphiql: false
+
 logging:
   level:
     ROOT: INFO
@@ -7,18 +10,21 @@ server:
   port: 8080
   servlet:
     context-path: /api
-# comprimir todas as respostas nos requisitos abaixo
+  # comprimir todas as respostas nos requisitos abaixo
   compression:
     enabled: true # Whether response compression is enabled.
     mime-types: text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json # Comma-separated list of MIME types that should be compressed.
     min-response-size: 1024 # Minimum "Content-Length" value that is required for compression to be performed.
-# configurando as quantidades de threads do servidor
+  # configurando as quantidades de threads do servidor
   undertow:
     threads:
       worker: 64 # Generally this should be reasonably high, at least 10 per CPU core: https://undertow.io/undertow-docs/undertow-docs-2.1.0/index.html#listeners-2
       io: 4 # One IO thread per CPU core is a reasonable default: https://undertow.io/undertow-docs/undertow-docs-2.1.0/index.html#listeners-2
 
 spring:
+  graphql:
+    graphiql:
+      enabled: ${graphql.graphiql}
   servlet:
     multipart:
       max-file-size: 10GB # definindo o tamanho maximo de um arquivo
