Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0505 - adicionando configuracao com o elasticsearch

--- a/infrastructure/src/main/resources/application-test-e2e.yml
+++ b/infrastructure/src/main/resources/application-test-e2e.yml
@@ -1,3 +1,8 @@
+elastichsearch:
+  uris: http://localhost:9200
+  username: elastic
+  password: elastic
+
 keycloak:
   realm: test
   host: http://test:8443
