--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+elastichsearch:
+  connect-timeout: 250
+  socket-timeout: 1_100
+
 graphql:
   graphiql: false
 
@@ -22,6 +26,12 @@ server:
       io: 4 # One IO thread per CPU core is a reasonable default: https://undertow.io/undertow-docs/undertow-docs-2.1.0/index.html#listeners-2
 
 spring:
+  elastichsearch:
+    uris: ${elastichsearch.uris}
+    username: ${elastichsearch.username}
+    password: ${elastichsearch.password}
+    connect-timeout: ${elastichsearch.connect-timeout}
+    socket-timeout: ${elastichsearch.socket-timeout}
   graphql:
     graphiql:
       enabled: ${graphql.graphiql}
