--- a/infrastructure/src/main/resources/application-production.yml
+++ b/infrastructure/src/main/resources/application-production.yml
@@ -1,3 +1,8 @@
+elastichsearch:
+  uris: ${ELASTICHSEARCH_URIS}
+  username: ${ELASTICHSEARCH_USERNAME}
+  password: ${ELASTICHSEARCH_PASSWORD}
+
 keycloak:
-  realm: ${KEYCLOAK_REALM:fc3-codeflix}
-  host: ${KEYCLOAK_HOST:http://localhost:8443}
+  realm: ${KEYCLOAK_REALM}
+  host: ${KEYCLOAK_HOST}
