--- a/infrastructure/src/main/resources/application-sandbox.yml
+++ b/infrastructure/src/main/resources/application-sandbox.yml
@@ -1,3 +1,8 @@
+elastichsearch:
+  uris: ${ELASTICHSEARCH_URIS:http://localhost:9200}
+  username: ${ELASTICHSEARCH_USERNAME:elastic}
+  password: ${ELASTICHSEARCH_PASSWORD:elastic}
+
 keycloak:
   realm: ${KEYCLOAK_REALM:fc3-codeflix}
   host: ${KEYCLOAK_HOST:http://localhost:8443}
