--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -1,3 +1,8 @@
+elastichsearch:
+  uris: http://localhost:9200
+  username: elastic
+  password: elastic
+
 keycloak:
   realm: test
   host: http://test:8443
