--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -4,7 +4,7 @@ plugins {
 //    adicionando plugin que fornece facilidades para rodar a aplicacao
     id 'application'
     //    plugins do spring e spring boot
-    id 'org.springframework.boot' version '3.0.6'
+    id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -39,12 +39,13 @@ dependencies {
     testImplementation(project(path: ':domain', configuration: 'testClasses'))
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.springframework.graphql:spring-graphql-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    testImplementation 'org.testcontainers:testcontainers:1.18.1'
-    testImplementation 'org.testcontainers:elasticsearch:1.18.1'
-    testImplementation 'org.testcontainers:junit-jupiter:1.18.1'
+    testImplementation 'org.testcontainers:testcontainers:1.18.3'
+    testImplementation 'org.testcontainers:elasticsearch:1.18.3'
+    testImplementation 'org.testcontainers:junit-jupiter:1.18.3'
 
 }
 
