--- a/infrastructure/src/main/resources/application-sandbox.yml
+++ b/infrastructure/src/main/resources/application-sandbox.yml
@@ -7,6 +7,9 @@ keycloak:
   realm: ${KEYCLOAK_REALM:fc3-codeflix}
   host: ${KEYCLOAK_HOST:http://localhost:8443}
 
+graphql:
+  graphiql: true
+
 server:
   port: 8080
   undertow:
