Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0808 - implementando a logica do kafka listener de categoria - tentando corrigir problema ao consultar elasticsearch pelo graphiql
- dando problema de acesso negado ao elasticsearch, uma vez que tentamos buscar as categorias pelo graphiql

- igualando arquivos de configuracao com os do curso

--- a/infrastructure/src/main/resources/application-production.yml
+++ b/infrastructure/src/main/resources/application-production.yml
@@ -1,7 +1,7 @@
-elastichsearch:
-  uris: ${ELASTICHSEARCH_URIS}
-  username: ${ELASTICHSEARCH_USERNAME}
-  password: ${ELASTICHSEARCH_PASSWORD}
+elasticsearch:
+  uris: ${ELASTICSEARCH_URIS}
+  username: ${ELASTICSEARCH_USERNAME}
+  password: ${ELASTICSEARCH_PASSWORD}
 
 keycloak:
   realm: ${KEYCLOAK_REALM}
