--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -1,9 +1,9 @@
-elastichsearch:
+elasticsearch:
   connect-timeout: 250
-  socket-timeout: 1_100
+  socket-timeout: 1_000
 
 graphql:
-  graphiql: false
+  graphiql: true
 
 kafka:
   auto-create-topics: false
@@ -12,7 +12,7 @@ kafka:
   consumers:
     categories:
       auto-offset-reset: earliest
-      concurrency: 3
+      concurrency: 1
       id: kafka-listener-categories
       topics: adm_videos_mysql.adm_videos.categories
       group-id: catalogo-service
@@ -38,12 +38,12 @@ server:
       io: 4 # One IO thread per CPU core is a reasonable default: https://undertow.io/undertow-docs/undertow-docs-2.1.0/index.html#listeners-2
 
 spring:
-  elastichsearch:
-    uris: ${elastichsearch.uris}
-    username: ${elastichsearch.username}
-    password: ${elastichsearch.password}
-    connect-timeout: ${elastichsearch.connect-timeout}
-    socket-timeout: ${elastichsearch.socket-timeout}
+  elasticsearch:
+    uris: ${elasticsearch.uris}
+    username: ${elasticsearch.username}
+    password: ${elasticsearch.password}
+    connect-timeout: ${elasticsearch.connect-timeout}
+    socket-timeout: ${elasticsearch.socket-timeout}
   graphql:
     graphiql:
       enabled: ${graphql.graphiql}
