--- a/infrastructure/src/main/resources/application-sandbox.yml
+++ b/infrastructure/src/main/resources/application-sandbox.yml
@@ -1,14 +1,14 @@
-elastichsearch:
-  uris: ${ELASTICHSEARCH_URIS:http://localhost:9200}
-  username: ${ELASTICHSEARCH_USERNAME:elastic}
-  password: ${ELASTICHSEARCH_PASSWORD:elastic}
+elasticsearch:
+  uris: ${ELASTICSEARCH_URIS:http://localhost:9200}
+  username: ${ELASTICSEARCH_USERNAME:elastic}
+  password: ${ELASTICSEARCH_PASSWORD:elastic}
+
+graphql:
+  graphiql: true
 
 keycloak:
   realm: ${KEYCLOAK_REALM:fc3-codeflix}
   host: ${KEYCLOAK_HOST:http://localhost:8443}
-
-graphql:
-  graphiql: true
 
 server:
   port: 8080
