Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0809 - testes integrados do kafka listener de categoria

--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -6,3 +6,8 @@ elasticsearch:
 keycloak:
   realm: test
   host: http://test:8443
+
+logging:
+  level:
+    ROOT: WARN
+    br.com.jkavdev.fullcycle.admin.catalogo: WARN
