Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0902 - atualizando o spring boot e alterando teste de categoria listener - corrigindo erro ao rodar testes do elasticsearch
- precisa de fato informar a porta do elasticsearch

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -20,7 +20,7 @@ kafka:
 logging:
   level:
     ROOT: INFO
-    br.com.jkavdev.fullcycle.admin.catalogo: DEBUG
+    br.com.jkavdev.fullcycle.catalogo: DEBUG
 
 server:
   port: 8080
