--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -10,4 +10,4 @@ keycloak:
 logging:
   level:
     ROOT: WARN
-    br.com.jkavdev.fullcycle.admin.catalogo: WARN
+    br.com.jkavdev.fullcycle.catalogo: WARN
