--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    implementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
 
     implementation 'org.springframework.kafka:spring-kafka'
 
@@ -51,6 +52,12 @@ dependencies {
     testImplementation 'org.testcontainers:kafka:1.18.3'
     testImplementation 'org.testcontainers:junit-jupiter:1.18.3'
 
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.0"
+    }
 }
 
 testCodeCoverageReport {
