--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -11,3 +11,8 @@ logging:
   level:
     ROOT: WARN
     br.com.jkavdev.fullcycle.catalogo: WARN
+
+rest-client:
+  base-url: "http://localhost:${wiremock.server.port:8001}"
+  categories:
+    readTimeout: 300
