Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0906 - adicionando fault tolarance retry pattern

--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -16,3 +16,9 @@ rest-client:
   base-url: "http://localhost:${wiremock.server.port:8001}"
   categories:
     readTimeout: 300
+
+resilience4j.retry:
+  configs:
+    default:
+      maxAttempts: 2
+      waitDuration: 100
