--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
     }
+
+    implementation("org.springframework.boot:spring-boot-starter-aop")
     implementation 'org.springframework.boot:spring-boot-starter-undertow'
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -38,6 +40,9 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
 
     implementation 'com.fasterxml.jackson.module:jackson-module-afterburner'
+
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3'
+    implementation 'io.github.resilience4j:resilience4j-retry'
 
     testImplementation(project(path: ':domain', configuration: 'testClasses'))
 
@@ -56,6 +61,7 @@ dependencies {
 
 dependencyManagement {
     imports {
+        mavenBom "io.github.resilience4j:resilience4j-bom:2.2.0"
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.0"
     }
 }
