--- a/infrastructure/src/main/resources/application-test-e2e.yml
+++ b/infrastructure/src/main/resources/application-test-e2e.yml
@@ -16,6 +16,11 @@ rest-client:
   categories:
     readTimeout: 300
 
+resilience4j.bulkhead:
+  configs:
+    default:
+      maxConcurrentCalls: 1
+
 resilience4j.retry:
   configs:
     default:
