--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -22,6 +22,15 @@ resilience4j.bulkhead:
     default:
       maxConcurrentCalls: 1
 
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      minimumNumberOfCalls: 1
+      permittedNumberOfCallsInHalfOpenState: 1
+      failureRateThreshold: 50
+      slowCallRateThreshold: 50
+      slowCallDurationThreshold: 300
+
 resilience4j.retry:
   configs:
     default:
