--- a/infrastructure/src/main/resources/application-production.yml
+++ b/infrastructure/src/main/resources/application-production.yml
@@ -4,5 +4,11 @@ elasticsearch:
   password: ${ELASTICSEARCH_PASSWORD}
 
 keycloak:
+  client-id: ${KEYCLOAK_CLIENT_ID}
+  client-secret: ${KEYCLOAK_CLIENT_SECRET}
   realm: ${KEYCLOAK_REALM}
   host: ${KEYCLOAK_HOST}
+
+rest-client:
+  keycloak:
+    read-timeout: 1_000
