--- a/infrastructure/src/main/resources/application-sandbox.yml
+++ b/infrastructure/src/main/resources/application-sandbox.yml
@@ -7,8 +7,14 @@ graphql:
   graphiql: true
 
 keycloak:
+  client-id: ${KEYCLOAK_CLIENT_ID}
+  client-secret: ${KEYCLOAK_CLIENT_SECRET}
   realm: ${KEYCLOAK_REALM:fc3-codeflix}
   host: ${KEYCLOAK_HOST:http://localhost:8443}
+
+rest-client:
+  keycloak:
+    read-timeout: 1_000
 
 server:
   port: 8080
