--- a/infrastructure/src/main/resources/application-test-e2e.yml
+++ b/infrastructure/src/main/resources/application-test-e2e.yml
@@ -7,8 +7,10 @@ elasticsearch:
   password: elastic
 
 keycloak:
+  client-id: fc3-app
+  client-secret: secret
   realm: test
-  host: http://test:8443
+  host: "http://localhost:${wiremock.server.port:8001}"
 
 logging:
   level:
@@ -17,6 +19,8 @@ logging:
 rest-client:
   base-url: "http://localhost:${wiremock.server.port:8001}"
   categories:
+    read-timeout: 300
+  keycloak:
     read-timeout: 300
 
 resilience4j.bulkhead:
