Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 0915 - alguns ajustes para funcionar o diaxo do projeto - FUUUUUCKE....... passei dias pra entender essa porra kkkk

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -20,7 +20,7 @@ kafka:
       auto-offset-reset: earliest
       concurrency: 1
       id: kafka-listener-categories
-      topics: adm_videos_mysql.adm_videos.categories
+      topics: adm_videos.adm_videos.categories
       group-id: catalogo-service
 
 keycloak:
