--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,4 @@
-rootProject.name = 'fc3-catalago'
+rootProject.name = 'fc3-catalogo'
 include 'domain'
 include 'application'
 include 'infrastructure'
-
