Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 1104 - igualando projeto com o projeto do curso ate o modulo 11 do repo do curso

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -21,6 +21,7 @@ kafka:
       concurrency: 1
       id: kafka-listener-categories
       topics: adm_videos.adm_videos.categories
+#      topics: adm_videos_mysql.adm_videos.categories # rever
       group-id: catalogo-service
 
 keycloak:
