Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 1301 - criando o kafka listener de cast member

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -20,9 +20,18 @@ kafka:
       auto-offset-reset: earliest
       concurrency: 1
       id: kafka-listener-categories
-      topics: adm_videos.adm_videos.categories
+      topics: adm_videos_mysql.adm_videos.categories
 #      topics: adm_videos_mysql.adm_videos.categories # rever
       group-id: catalogo-service
+      max-attempts: 5
+    cast-members:
+      auto-offset-reset: earliest
+      concurrency: 1
+      id: kafka-listener-castmembers
+      topics: adm_videos_mysql.adm_videos.cast_members
+#      topics: adm_videos_mysql.adm_videos.categories # rever
+      group-id: catalogo-service
+      max-attempts: 4
 
 keycloak:
   token-uri: /protocol/openid-connect/token
