--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -20,16 +20,16 @@ kafka:
       auto-offset-reset: earliest
       concurrency: 1
       id: kafka-listener-categories
-      topics: adm_videos_mysql.adm_videos.categories
-#      topics: adm_videos_mysql.adm_videos.categories # rever
+      topics: adm_videos.adm_videos.categories
+#      topics: adm_videos.adm_videos.categories # rever
       group-id: catalogo-service
       max-attempts: 5
     cast-members:
       auto-offset-reset: earliest
       concurrency: 1
       id: kafka-listener-castmembers
-      topics: adm_videos_mysql.adm_videos.cast_members
-#      topics: adm_videos_mysql.adm_videos.categories # rever
+      topics: adm_videos.adm_videos.cast_members
+#      topics: adm_videos.adm_videos.categories # rever
       group-id: catalogo-service
       max-attempts: 4
 
