Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 1701 - criando o genre rest gateway
- resolvendo erro do CategoryRestGatewayTest pois eh necessario passar o token durante a chamada rest

- ajustando a configuracao do circuit breaker adicionando as instancias de categoria e genero

- voltando as configuracoes de json properties no genero dto, para que o spring consigo sem erros mapear os json

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 cache:
   type: cache2k
-  names: admin-categories
+  names: admin-categories, admin-genres
   max-entries: 200
   ttl: 60 # seconds
 
@@ -39,6 +39,9 @@ keycloak:
 rest-client:
   categories:
     base-url: "${rest-client.base-url}/api/categories"
+    read-timeout: 1_000
+  genres:
+    base-url: "${rest-client.base-url}/api/genres"
     read-timeout: 1_000
   keycloak:
     base-url: "${keycloak.host}/realms/${keycloak.realm}"
@@ -96,6 +99,8 @@ resilience4j.bulkhead:
     instances:
       categories:
         baseConfig: default
+      genres:
+        baseConfig: default
 
 resilience4j.circuitbreaker:
   configs:
@@ -120,6 +125,11 @@ resilience4j.circuitbreaker:
         - java.net.http.HttpTimeoutException
         - java.util.concurrent.TimeoutException
         - java.io.IOException
+    instances:
+      categories:
+        baseConfig: default
+      genres:
+        baseConfig: default
 
 resilience4j.retry:
   configs:
@@ -139,4 +149,6 @@ resilience4j.retry:
         - java.io.IOException
   instances:
     categories:
+      baseConfig: default
+    genres:
       baseConfig: default
