Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 1702 - criando o kafka listener de genre - igualando os repositorios e corrigindo erros de alguns testes

--- a/infrastructure/src/main/resources/application-test-e2e.yml
+++ b/infrastructure/src/main/resources/application-test-e2e.yml
@@ -8,9 +8,9 @@ elasticsearch:
 
 keycloak:
   client-id: fc3-app
-  client-secret: secret
-  realm: test
+  client-secret: seecret
   host: "http://localhost:${wiremock.server.port:8001}"
+  realm: test
 
 logging:
   level:
