--- a/infrastructure/src/main/resources/application-test-integration.yml
+++ b/infrastructure/src/main/resources/application-test-integration.yml
@@ -8,9 +8,9 @@ elasticsearch:
 
 keycloak:
   client-id: fc3-app
-  client-secret: secret
-  realm: test
+  client-secret: seecret
   host: "http://localhost:${wiremock.server.port:8001}"
+  realm: test
 
 rest-client:
   base-url: "http://localhost:${wiremock.server.port:8001}"
@@ -40,8 +40,3 @@ resilience4j.retry:
     default:
       maxAttempts: 2
       waitDuration: 100
-
-logging:
-  level:
-    ROOT: WARN
-    br.com.jkavdev.fullcycle.catalogo: WARN
