--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 cache:
   type: cache2k
-  names: admin-categories, admin-genres
+  names: admin-categories, admin-genres, admin-videos
   max-entries: 200
   ttl: 60 # seconds
 
@@ -47,6 +47,9 @@ rest-client:
     read-timeout: 1_000
   genres:
     base-url: "${rest-client.base-url}/api/genres"
+    read-timeout: 1_000
+  videos:
+    base-url: "${rest-client.base-url}/api/videos"
     read-timeout: 1_000
   keycloak:
     base-url: "${keycloak.host}/realms/${keycloak.realm}"
@@ -106,6 +109,8 @@ resilience4j.bulkhead:
         baseConfig: default
       genres:
         baseConfig: default
+      videos:
+        baseConfig: default
 
 resilience4j.circuitbreaker:
   configs:
@@ -135,6 +140,8 @@ resilience4j.circuitbreaker:
         baseConfig: default
       genres:
         baseConfig: default
+      videos:
+        baseConfig: default
 
 resilience4j.retry:
   configs:
@@ -156,4 +163,6 @@ resilience4j.retry:
     categories:
       baseConfig: default
     genres:
+      baseConfig: default
+    videos:
       baseConfig: default
