--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
           distribution: 'adopt'
       # 3. Executar os testes da aplicação
       - name: Run application tests
-        run: git update-index --chmod=+x ./gradlew test
+        run: ./gradlew test
