--- a/infrastructure/src/main/resources/application-development.yml
+++ b/infrastructure/src/main/resources/application-development.yml
@@ -6,6 +6,10 @@ elasticsearch:
 graphql:
   graphiql: true
 
+# cada ambiente vai configurar seu bootstrap-servers
+kafka:
+  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+
 keycloak:
   client-id: ${KEYCLOAK_CLIENT_ID}
   client-secret: ${KEYCLOAK_CLIENT_SECRET}
